--- a/package.json
+++ b/package.json
@@ -16,9 +16,14 @@
     "gulp-clean": "^0.4.0",
     "gulp-concat": "^2.6.1",
     "gulp-imagemin": "^9.1.0",
+    "gulp-newer": "^1.4.0",
     "gulp-postcss": "^10.0.0",
     "gulp-sass": "^6.0.0",
     "gulp-uglify-es": "^3.0.0",
     "sass": "^1.83.0"
+  },
+  "dependencies": {
+    "jquery": "^3.7.1",
+    "slick-carousel": "^1.8.1"
   }
 }
