--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "@fancyapps/ui": "github:fancyapps/ui",
     "autoprefixer": "^10.4.20",
     "browser-sync": "^3.0.3",
+    "fancybox": "^3.0.1",
     "gulp": "^5.0.0",
     "gulp-autoprefixer": "^8.0.0",
     "gulp-clean": "^0.4.0",
