--- a/package.json
+++ b/package.json
@@ -24,11 +24,13 @@
     "gulp-sass": "^6.0.0",
     "gulp-uglify-es": "^3.0.0",
     "ion-rangeslider": "^2.3.1",
+    "jquery-form-styler": "^2.0.2",
     "rateyo": "^3.0.0-alpha.2",
-    "sass": "^1.83.0"
+    "sass": "^1.83.0",
+    "slick-carousel": "^1.8.1",
+    "slick-slider": "^1.8.2"
   },
   "dependencies": {
-    "jquery": "^3.7.1",
-    "slick-carousel": "^1.8.1"
+    "jquery": "^3.7.1"
   }
 }
